Initial commit for the trilio project model
