# backend/routes/api.php
@@ -117,4 +117,19 @@ Route::name('v1.')->prefix('v1')->group(function () {
     Route::get('users/{user}/messages', [\App\Http\Controllers\Api\MessageController::class, 'index']);
     Route::get('users/{user}/messages/{message}', [\App\Http\Controllers\Api\MessageController::class, 'show']);
     Route::patch('users/{user}/messages/{message}', [\App\Http\Controllers\Api\MessageController::class, 'update']);
+
+    Route::middleware(['auth:api', 'roles:manager,staff'])->name('trilio.')->prefix('trilio')->group(function () {
+        Route::get('projects', [\App\Http\Controllers\Trilio\Api\ProjectController::class, 'index'])
+            ->name('projects.index');
+        //->middleware('can:viewAny');
+        Route::get('projects/{project:uuid}', [\App\Http\Controllers\Trilio\Api\ProjectController::class, 'show'])
+            ->name('projects.show');
+        //->middleware('can:view');
+        Route::post('projects', [\App\Http\Controllers\Trilio\Api\ProjectController::class, 'store'])
+            ->name('projects.store');
+        Route::patch('projects/{project:uuid}', [\App\Http\Controllers\Trilio\Api\ProjectController::class, 'update'])
+            ->name('projects.update');
+        Route::delete('projects/{project:uuid}', [\App\Http\Controllers\Trilio\Api\ProjectController::class, 'destroy'])
+            ->name('projects.destroy');
+    });
 });
